--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:h2:mem:books_data
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#enabling the H2 console
-spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hb_student_tracker?useSSL=false
+spring.datasource.username=hbstudent
+spring.datasource.password=hbstudent
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
